# Jogo-da-vida-de-Conway

./: CMakeCache.txt  CMakeLists.txt  InterfaceUsuario.h  Main.c  Makefile  README.md  cmake_install.cmake  prog
Celulas/: Celulas.c  Celulas.h
GerenciadorDeEntrada/: GerenciadorDeEntrada.c  GerenciadorDeEntrada.h
InterfaceUsuario/: InterfaceUsuario.c  InterfaceUsuario.h
Utilitarios/: Utilitarios.c  Utilitarios.h
